fixed the visibilty issue nav icon

--- a/custom_static/css/hardhat.css
+++ b/custom_static/css/hardhat.css
@@ -15821,9 +15821,7 @@ textarea.form-control-lg {
     background: #1c2540;
     color: #ffffff; }
 
-.navbar-light .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Crect width='30' height='30' fill='rgba(255, 205, 17, 0.9)' rx='5' ry='5'/%3E%3Cpath stroke='%231F2937' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
+
     
 
 .navbar-light .navbar-brand-dark {
